--- a/homepage.html
+++ b/homepage.html
@@ -74,7 +74,7 @@
     <script src="./js/preLoader.js" defer></script>
 
     <!-- slider js -->
-    <script src="./js/slider.js" defer></script>
+    <script src="./js/slider.js" type="module" defer></script>
 
     <!-- fade in -->
     <script src="./js/fadein.js" defer></script>
@@ -289,206 +289,22 @@
         <h2 class="section-title slider-section-title">Choose Your Faction</h2>
 
         <!-- slider control left -->
-        <div class="slider-control fade-in">
+        <div class="slider-control">
           <i class="fa-solid fa-angle-left slider-left"></i>
         </div>
 
         <!-- slider -->
-        <div class="slider-main fade-in">
+        <div class="slider-main">
           <!-- slider item one -->
-          <div class="slider-item slider-item-1">
-            <div class="slider-text">
-              <h2 class="slider-item-title">jdm</h2>
-              <h3 class="slider-item-subtitle">"The imposters"</h3>
-              <p class="slider-item-desc">
-                Since the early 1980’s, the JDM Tuners were formed around the
-                emerging culture of drifting, modding, and street racing. Now,
-                the tuners are forced to operate undercover, as they illicitly
-                mod tuners around the world to stop The Machine
-              </p>
-              <h2 class="slider-item-info">Info</h2>
-              <ul class="slider-item-links">
-                <li class="slider-item-link">
-                  Meta Tuners
-                  <a href="#"
-                    >Opensea <i class="fa-solid fa-arrow-right"></i
-                  ></a>
-                </li>
-                <li class="slider-item-link">
-                  Meta Tuners
-                  <a href="#"
-                    >LooksRare <i class="fa-solid fa-arrow-right"></i
-                  ></a>
-                </li>
-                <li class="slider-item-link">
-                  Meta Tuners
-                  <a href="#">Rarity <i class="fa-solid fa-arrow-right"></i></a>
-                </li>
-                <li class="slider-item-link">
-                  Meta Tuners
-                  <a href="#"
-                    >Analytics <i class="fa-solid fa-arrow-right"></i
-                  ></a>
-                </li>
-              </ul>
-            </div>
-            <div class="slider-images" data-tilt data-tilt-max="10">
-              <img
-                src="./img/COLLECTION/JDM Character.png"
-                alt="jdm"
-                class="charector-img"
-              />
-            </div>
-          </div>
-
-          <!-- slider item 2 -->
-          <div class="slider-item slider-item-2">
-            <div class="slider-text">
-              <h2 class="slider-item-title">EXOTIC</h2>
-              <h3 class="slider-item-subtitle">"The Widowmakers"</h3>
-              <p class="slider-item-desc">
-                With their insanely high horsepower and expensive lifestyles,
-                The Widowmakers quickly lived up to their name. Using their
-                celebrity status and sociopolitical influence, they play a
-                integral role in resisting The Machine.
-              </p>
-              <h2 class="slider-item-info">Info</h2>
-              <ul class="slider-item-links">
-                <li class="slider-item-link">
-                  Meta Tuners
-                  <a href="#"
-                    >Opensea <i class="fa-solid fa-arrow-right"></i
-                  ></a>
-                </li>
-                <li class="slider-item-link">
-                  Meta Tuners
-                  <a href="#"
-                    >LooksRare <i class="fa-solid fa-arrow-right"></i
-                  ></a>
-                </li>
-                <li class="slider-item-link">
-                  Meta Tuners
-                  <a href="#">Rarity <i class="fa-solid fa-arrow-right"></i></a>
-                </li>
-                <li class="slider-item-link">
-                  Meta Tuners
-                  <a href="#"
-                    >Analytics <i class="fa-solid fa-arrow-right"></i
-                  ></a>
-                </li>
-              </ul>
-            </div>
-            <div class="slider-images" data-tilt data-tilt-max="10">
-              <img
-                src="./img/COLLECTION/EXOTIC Character.png"
-                alt="jdm"
-                class="charector-img"
-              />
-            </div>
-          </div>
-
-          <!-- slider item three -->
-          <div class="slider-item slider-item-3">
-            <div class="slider-text">
-              <h2 class="slider-item-title">MUSCLE</h2>
-              <h3 class="slider-item-subtitle">"The GearHeads"</h3>
-              <p class="slider-item-desc">
-                The Muscle Tuners are inherently geared to supply the resistance
-                with much needed raw power. Their traditional tuning methods and
-                high-combustion engines make them especially resistant to
-                electrical and cyber-attacks, making them a dominant force
-                against The Machine.
-              </p>
-              <h2 class="slider-item-info">Info</h2>
-              <ul class="slider-item-links">
-                <li class="slider-item-link">
-                  Meta Tuners
-                  <a href="#"
-                    >Opensea <i class="fa-solid fa-arrow-right"></i
-                  ></a>
-                </li>
-                <li class="slider-item-link">
-                  Meta Tuners
-                  <a href="#"
-                    >LooksRare <i class="fa-solid fa-arrow-right"></i
-                  ></a>
-                </li>
-                <li class="slider-item-link">
-                  Meta Tuners
-                  <a href="#">Rarity <i class="fa-solid fa-arrow-right"></i></a>
-                </li>
-                <li class="slider-item-link">
-                  Meta Tuners
-                  <a href="#"
-                    >Analytics <i class="fa-solid fa-arrow-right"></i
-                  ></a>
-                </li>
-              </ul>
-            </div>
-            <div class="slider-images" data-tilt data-tilt-max="10">
-              <img
-                src="./img/COLLECTION/MUSCLE Character.png"
-                alt="jdm"
-                class="charector-img"
-              />
-            </div>
-          </div>
-
-          <!-- slider item four -->
-          <div class="slider-item slider-item-4">
-            <div class="slider-text">
-              <h2 class="slider-item-title">EURO</h2>
-              <h3 class="slider-item-subtitle">"The Engineers"</h3>
-              <p class="slider-item-desc">
-                Using their expertise in high performance and engineering, the
-                Euro Tuners fight alongside the resistance with cutting edge
-                technology and advanced programming. Siphoning intel from deep
-                within the Hardrive City’s data vaults, they have unique insight
-                to the inner workings of The Machine’s attacks.
-              </p>
-              <h2 class="slider-item-info">Info</h2>
-              <ul class="slider-item-links">
-                <li class="slider-item-link">
-                  Meta Tuners
-                  <a href="#"
-                    >Opensea <i class="fa-solid fa-arrow-right"></i
-                  ></a>
-                </li>
-                <li class="slider-item-link">
-                  Meta Tuners
-                  <a href="#"
-                    >LooksRare <i class="fa-solid fa-arrow-right"></i
-                  ></a>
-                </li>
-                <li class="slider-item-link">
-                  Meta Tuners
-                  <a href="#">Rarity <i class="fa-solid fa-arrow-right"></i></a>
-                </li>
-                <li class="slider-item-link">
-                  Meta Tuners
-                  <a href="#"
-                    >Analytics <i class="fa-solid fa-arrow-right"></i
-                  ></a>
-                </li>
-              </ul>
-            </div>
-            <div class="slider-images" data-tilt data-tilt-max="10">
-              <img
-                src="./img/COLLECTION/EURO Character.png"
-                alt="jdm"
-                class="charector-img"
-              />
-            </div>
-          </div>
         </div>
 
         <!-- slider control right -->
-        <div class="slider-control fade-in">
+        <div class="slider-control">
           <i class="fa-solid fa-angle-right slider-right"></i>
         </div>
 
         <!-- gallery scroll -->
-        <div class="marquee-vertical fade-in">
+        <div class="marquee-vertical">
           <ul class="marquee-content-vertical">
             <li>
               <img src="./img/CAROUSELIMAGES/carousel-img1.png" alt="" />
@@ -555,13 +371,23 @@
           <img
             src="./img/slider/euro-dot.svg"
             alt=""
-            class="dot"
             data-slide="3"
+            class="dot"
           />
         </div>
 
+        <!-- slider controls mobile -->
+        <div class="slider-controls-mobile">
+          <i class="fa-solid fa-angle-left slider-left"></i>
+          <i class="fa-solid fa-angle-right slider-right"></i>
+        </div>
+
         <!-- cta -->
-        <a href="#" class="btn slider-btn fade-in">mint coming soon</a>
+        <div class="slider-btn-container">
+          <a href="#" class="btn slider-btn">mint coming soon</a>
+        </div>
+
+        <!-- horizontal gallery -->
       </div>
     </section>
     <!-- slider section end -->
