--- a/homepage.html
+++ b/homepage.html
@@ -68,7 +68,7 @@
     <script src="./js/app.js" defer></script>
 
     <!-- tilt js -->
-    <script src="./js/vanilla-tilt.js" defer></script>
+    <script src="./js/vanilla-tilt.js" defer type="module"></script>
 
     <!-- preloader js -->
     <script src="./js/preLoader.js" defer></script>
@@ -290,9 +290,205 @@
           <i class="fa-solid fa-angle-left slider-left"></i>
         </div>
 
-        <!-- slider -->
+        <!-- slider main -->
         <div class="slider-main fade-in">
           <!-- slider item one -->
+          <div class="slider-item slider-item-1 active">
+            <!-- slider text (slide) -->
+            <div class="slider-text">
+              <h2 class="slider-item-title">JDM</h2>
+              <h3 class="slider-item-subtitle">“The Importers”</h3>
+              <p class="slider-item-desc">
+                Since the early 1980’s, the JDM Tuners were formed around the
+                emerging culture of drifting, modding, and street racing. Now,
+                the tuners are forced to operate undercover, as they illicitly
+                mod tuners around the world to stop The Machine
+              </p>
+              <h2 class="slider-item-info">Info</h2>
+              <ul class="slider-item-links">
+                <li class="slider-item-link">
+                  Meta Tuners
+                  <a href="#"
+                    >Opensea <i class="fa-solid fa-arrow-right"></i
+                  ></a>
+                </li>
+                <li class="slider-item-link">
+                  Meta Tuners
+                  <a href="#"
+                    >LooksRare <i class="fa-solid fa-arrow-right"></i
+                  ></a>
+                </li>
+                <li class="slider-item-link">
+                  Meta Tuners
+                  <a href="#">Rarity <i class="fa-solid fa-arrow-right"></i></a>
+                </li>
+                <li class="slider-item-link">
+                  Meta Tuners
+                  <a href="#"
+                    >Analytics <i class="fa-solid fa-arrow-right"></i
+                  ></a>
+                </li>
+              </ul>
+            </div>
+
+            <!-- slider img (slide) -->
+            <div class="slider-images" data-tilt data-tilt-max="10">
+              <img
+                src="./img/COLLECTION/JDM Character.png"
+                alt="jdm"
+                class="charector-img"
+              />
+            </div>
+          </div>
+
+          <!-- slider item two -->
+          <div class="slider-item slider-item-2 next">
+            <!-- slider text (slide) -->
+            <div class="slider-text">
+              <h2 class="slider-item-title">EXOTIC</h2>
+              <h3 class="slider-item-subtitle">“The Widowmakers”</h3>
+              <p class="slider-item-desc">
+                With their insanely high horsepower and expensive lifestyles,
+                The Widowmakers quickly lived up to their name. Using their
+                celebrity status and sociopolitical influence, they play a
+                integral role in resisting The Machine.
+              </p>
+              <h2 class="slider-item-info">Info</h2>
+              <ul class="slider-item-links">
+                <li class="slider-item-link">
+                  Meta Tuners
+                  <a href="#"
+                    >Opensea <i class="fa-solid fa-arrow-right"></i
+                  ></a>
+                </li>
+                <li class="slider-item-link">
+                  Meta Tuners
+                  <a href="#"
+                    >LooksRare <i class="fa-solid fa-arrow-right"></i
+                  ></a>
+                </li>
+                <li class="slider-item-link">
+                  Meta Tuners
+                  <a href="#">Rarity <i class="fa-solid fa-arrow-right"></i></a>
+                </li>
+                <li class="slider-item-link">
+                  Meta Tuners
+                  <a href="#"
+                    >Analytics <i class="fa-solid fa-arrow-right"></i
+                  ></a>
+                </li>
+              </ul>
+            </div>
+
+            <!-- slider img (slide) -->
+            <div class="slider-images" data-tilt data-tilt-max="10">
+              <img
+                src="./img/COLLECTION/EXOTIC Character.png"
+                alt="Exotic"
+                class="charector-img"
+              />
+            </div>
+          </div>
+
+          <!-- slider item three -->
+          <div class="slider-item slider-item-3 next">
+            <!-- slider text (slide) -->
+            <div class="slider-text">
+              <h2 class="slider-item-title">MUSCLE</h2>
+              <h3 class="slider-item-subtitle">“The GearHeads”</h3>
+              <p class="slider-item-desc">
+                The Muscle Tuners are inherently geared to supply the resistance
+                with much needed raw power. Their traditional tuning methods and
+                high-combustion engines make them especially resistant to
+                electrical and cyber-attacks, making them a dominant force
+                against The Machine.
+              </p>
+              <h2 class="slider-item-info">Info</h2>
+              <ul class="slider-item-links">
+                <li class="slider-item-link">
+                  Meta Tuners
+                  <a href="#"
+                    >Opensea <i class="fa-solid fa-arrow-right"></i
+                  ></a>
+                </li>
+                <li class="slider-item-link">
+                  Meta Tuners
+                  <a href="#"
+                    >LooksRare <i class="fa-solid fa-arrow-right"></i
+                  ></a>
+                </li>
+                <li class="slider-item-link">
+                  Meta Tuners
+                  <a href="#">Rarity <i class="fa-solid fa-arrow-right"></i></a>
+                </li>
+                <li class="slider-item-link">
+                  Meta Tuners
+                  <a href="#"
+                    >Analytics <i class="fa-solid fa-arrow-right"></i
+                  ></a>
+                </li>
+              </ul>
+            </div>
+
+            <!-- slider img (slide) -->
+            <div class="slider-images" data-tilt data-tilt-max="10">
+              <img
+                src="../img/COLLECTION/MUSCLE Character.png"
+                alt="Muscle"
+                class="charector-img"
+              />
+            </div>
+          </div>
+
+          <!-- slider item -->
+          <div class="slider-item slider-item-4 last">
+            <!-- slider text (slide) -->
+            <div class="slider-text">
+              <h2 class="slider-item-title">EURO</h2>
+              <h3 class="slider-item-subtitle">“The Engineers”</h3>
+              <p class="slider-item-desc">
+                Using their expertise in high performance and engineering, the
+                Euro Tuners fight alongside the resistance with cutting edge
+                technology and advanced programming. Siphoning intel from deep
+                within the Hardrive City’s data vaults, they have unique insight
+                to the inner workings of The Machine’s attacks.
+              </p>
+              <h2 class="slider-item-info">Info</h2>
+              <ul class="slider-item-links">
+                <li class="slider-item-link">
+                  Meta Tuners
+                  <a href="#"
+                    >Opensea <i class="fa-solid fa-arrow-right"></i
+                  ></a>
+                </li>
+                <li class="slider-item-link">
+                  Meta Tuners
+                  <a href="#"
+                    >LooksRare <i class="fa-solid fa-arrow-right"></i
+                  ></a>
+                </li>
+                <li class="slider-item-link">
+                  Meta Tuners
+                  <a href="#">Rarity <i class="fa-solid fa-arrow-right"></i></a>
+                </li>
+                <li class="slider-item-link">
+                  Meta Tuners
+                  <a href="#"
+                    >Analytics <i class="fa-solid fa-arrow-right"></i
+                  ></a>
+                </li>
+              </ul>
+            </div>
+
+            <!-- slider img (slide) -->
+            <div class="slider-images" data-tilt data-tilt-max="10">
+              <img
+                src="./img/COLLECTION/EURO Character.png"
+                alt="Euro"
+                class="charector-img"
+              />
+            </div>
+          </div>
         </div>
 
         <!-- slider control right -->
