--- a/homepage.html
+++ b/homepage.html
@@ -33,6 +33,9 @@
     <!-- slider section styles -->
     <link rel="stylesheet" href="./css/slider-section.css" />
 
+    <!-- slider gallery section styles -->
+    <link rel="stylesheet" href="./css/slider-gallery.css" />
+
     <!-- utilities section styles -->
     <link rel="stylesheet" href="./css/utilities-section.css" />
 
@@ -51,7 +54,7 @@
     <!-- contact us section styles -->
     <link rel="stylesheet" href="./css/contact-us.css" />
 
-    <!-- contact us section styles -->
+    <!-- gallery section styles -->
     <link rel="stylesheet" href="./css/gallery.css" />
 
     <!-- footer styles -->
@@ -580,7 +583,72 @@
           <a href="#" class="btn slider-btn fade-in">mint coming soon</a>
         </div>
 
-        <!-- horizontal gallery -->
+        <!-- gallery sections start -->
+        <div class="slider-gallery-main fade-in">
+          <ul class="slider-gallery-content">
+            <li>
+              <img src="./img/CAROUSELIMAGES/carousel-img1.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/carousel-img2.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/carousel-img3.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/carousel-img4.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/carousel-img5.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/carousel-img6.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/carousel-img7.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/carousel-img8.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/carousel-img1.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/carousel-img2.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/carousel-img3.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/carousel-img4.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/carousel-img5.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/carousel-img6.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/carousel-img7.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/carousel-img8.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/carousel-img1.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/carousel-img2.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/carousel-img3.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/carousel-img4.jpg" alt="" />
+            </li>
+          </ul>
+        </div>
+        <!-- gallery sections end -->
       </div>
     </section>
     <!-- slider section end -->
