--- a/homepage.html
+++ b/homepage.html
@@ -150,9 +150,7 @@
     <!-- nav homepage end-->
 
     <!-- bg image one start -->
-    <div class="bg-img bg-img-1">
-      <div class="placeholder"></div>
-    </div>
+    <div class="bg-img bg-img-1"></div>
     <!-- bg image one end -->
 
     <!-- welcome section start  -->
@@ -179,27 +177,28 @@
             around the world are ready to mobilize, and restore the Hardrive
             City its former glory.
           </p>
+          <div class="welcome-text-mobile fade-in">
+            <p class="welcome-section-desc welcome-section-desc-mobile fade-in">
+              An invisible threat looms. A once progressive and highly advanced
+              metropolis, Hardrive City, is seeing its rich culture and freedoms
+              siphoned off to a higher power. With autonomous
+            </p>
+            <span class="read-more">... Read More</span>
 
-          <p class="welcome-section-desc welcome-section-desc-mobile fade-in">
-            An invisible threat looms. A once progressive and highly advanced
-            metropolis, Hardrive City, is seeing its rich culture and freedoms
-            siphoned off to a higher power. With autonomous
-          </p>
-          <span class="read-more">... Read More</span>
-
-          <span class="read-more-text fade-in">
-            vehicles taking over the city, racetracks became junkyards, meetups
-            became sting operations, and tuners are being driven away from among
-            society. A highly advanced AI known as “The Machine”, seeks to gain
-            power through greed and corruption and grows more powerful as his
-            plague spreads across the region.
-            <br />
-            <br />
-            The Meta Tuners are specially attuned to The Machine’s plans, and
-            ready to move against the corrupted AI threatening the world. Tuners
-            around the world are ready to mobilize, and restore the Hardrive
-            City its former glory.
-          </span>
+            <span class="read-more-text fade-in">
+              vehicles taking over the city, racetracks became junkyards,
+              meetups became sting operations, and tuners are being driven away
+              from among society. A highly advanced AI known as “The Machine”,
+              seeks to gain power through greed and corruption and grows more
+              powerful as his plague spreads across the region.
+              <br />
+              <br />
+              The Meta Tuners are specially attuned to The Machine’s plans, and
+              ready to move against the corrupted AI threatening the world.
+              Tuners around the world are ready to mobilize, and restore the
+              Hardrive City its former glory.
+            </span>
+          </div>
 
           <a href="#" class="welcome-section-link fade-in"
             >Are you ready to take the wheel?</a
@@ -218,7 +217,7 @@
             </a>
           </div>
 
-          <p class="welcome-section-desc fade-in">
+          <p class="welcome-section-desc-2 fade-in">
             Mint date will be announced soon. Please check twitter AND discord
             for our official announcement!
           </p>
@@ -251,9 +250,7 @@
     <!-- welcome section end  -->
 
     <!-- bg img two start-->
-    <div class="bg-img bg-img-2">
-      <div class="placeholder"></div>
-    </div>
+    <div class="bg-img bg-img-2"></div>
     <!-- bg img two end-->
 
     <!-- collection section start -->
@@ -277,12 +274,7 @@
       </div>
 
       <div class="video-bg">
-        <video
-          autoplay
-          muted
-          src="./vid/collection-vid.mp4"
-          class="video"
-        ></video>
+        <video autoplay muted src="./vid/MM2a.mp4" class="video"></video>
       </div>
 
       <!-- mobile image for video -->
@@ -302,6 +294,12 @@
         <!-- slider control left -->
         <div class="slider-control fade-in">
           <i class="fa-solid fa-angle-left slider-left"></i>
+        </div>
+
+        <!-- slider controls mobile -->
+        <div class="slider-controls-mobile fade-in">
+          <i class="fa-solid fa-angle-left slider-left"></i>
+          <i class="fa-solid fa-angle-right slider-right"></i>
         </div>
 
         <!-- slider main -->
@@ -514,40 +512,84 @@
         <div class="marquee-vertical fade-in">
           <ul class="marquee-content-vertical">
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img1.png" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF1.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img2.png" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF2.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img3.png" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF3.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img4.png" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF4.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img5.png" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF5.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img6.png" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF6.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img7.png" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF7.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img8.png" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF8.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img1.png" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF9.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img2.png" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF10.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img3.png" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF11.jpg" alt="" />
+            </li>
+
+            <li>
+              <img src="./img/CAROUSELIMAGES/NF12.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img4.png" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF13.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/NF14.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/NF15.jpg" alt="" />
+            </li>
+
+            <li>
+              <img src="./img/CAROUSELIMAGES/NF16.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/NF17.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/NF18.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/NF19.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/NFT20.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/NF5.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/NF6.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/NF7.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/NF8.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/NF9.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/NF10.jpg" alt="" />
             </li>
           </ul>
         </div>
@@ -583,12 +625,6 @@
           />
         </div>
 
-        <!-- slider controls mobile -->
-        <div class="slider-controls-mobile fade-in">
-          <i class="fa-solid fa-angle-left slider-left"></i>
-          <i class="fa-solid fa-angle-right slider-right"></i>
-        </div>
-
         <!-- cta -->
         <div class="slider-btn-container">
           <a href="#" class="btn slider-btn fade-in">mint coming soon</a>
@@ -598,64 +634,81 @@
         <div class="slider-gallery-main fade-in">
           <ul class="slider-gallery-content">
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img1.jpg" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF1.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img2.jpg" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF2.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img3.jpg" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF3.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img4.jpg" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF4.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img5.jpg" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF5.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img6.jpg" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF6.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img7.jpg" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF7.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img8.jpg" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF8.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img1.jpg" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF9.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img2.jpg" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF10.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img3.jpg" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF11.jpg" alt="" />
+            </li>
+
+            <li>
+              <img src="./img/CAROUSELIMAGES/NF12.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img4.jpg" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF13.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img5.jpg" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF14.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img6.jpg" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF15.jpg" alt="" />
+            </li>
+
+            <li>
+              <img src="./img/CAROUSELIMAGES/NF16.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img7.jpg" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF17.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img8.jpg" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF18.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img1.jpg" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF19.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img2.jpg" alt="" />
+              <img src="./img/CAROUSELIMAGES/NFT20.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img3.jpg" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF5.jpg" alt="" />
             </li>
             <li>
-              <img src="./img/CAROUSELIMAGES/carousel-img4.jpg" alt="" />
+              <img src="./img/CAROUSELIMAGES/NF6.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/NF7.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/NF8.jpg" alt="" />
+            </li>
+            <li>
+              <img src="./img/CAROUSELIMAGES/NF9.jpg" alt="" />
             </li>
           </ul>
         </div>
@@ -770,7 +823,7 @@
             <div class="step-info">
               <h3 class="step-title">1st gear</h3>
               <ul>
-                <li>website 2.0</li>
+                <li>Website 2.0</li>
                 <li>Marketing Begins</li>
                 <li>Meta Tuners Mint 8,000 NFT’s at 0.08 ETH</li>
               </ul>
@@ -880,9 +933,9 @@
 
           <!-- member six -->
           <div class="team-member team-member-six fade-in">
-            <img src="./img/TEAM/Ethan.png" alt="cezar" class="member-image" />
-            <h3 class="member-name">ETHAN LEWIS</h3>
-            <h4 class="member-role">Analyst / Strategist</h4>
+            <img src="./img/TEAM/Bryan.png" alt="Bryan" class="member-image" />
+            <h3 class="member-name">BRYAN RIVAS</h3>
+            <h4 class="member-role">Interactive Manager</h4>
             <p class="member-info">Likes numbers, patterns and programs</p>
           </div>
         </div>
@@ -985,12 +1038,6 @@
     <!-- footer start -->
     <footer>
       <div class="footer container">
-        <div class="email">
-          <label class="email-label" for="email">Get on the list</label>
-          <br />
-          <input type="email" class="email-input" placeholder="email address" />
-        </div>
-
         <div class="footer-logo">
           <img
             src="./img/HOME PAGE/logo-2.png"
