--- a/homepage.html
+++ b/homepage.html
@@ -156,6 +156,7 @@
 
     <!-- bg image one start -->
     <div class="bg-img bg-img-1"></div>
+
     <!-- bg image one end -->
 
     <!-- welcome section start  -->
@@ -256,6 +257,7 @@
 
     <!-- bg img two start-->
     <div class="bg-img bg-img-2"></div>
+
     <!-- bg img two end-->
 
     <!-- collection section start -->
@@ -724,6 +726,7 @@
 
     <!-- bg image start -->
     <div class="bg-img bg-img-3"></div>
+
     <!-- bg image end -->
 
     <!-- utilities section start -->
@@ -808,6 +811,7 @@
 
     <!-- bg image start -->
     <div class="bg-img bg-img-4"></div>
+
     <!-- bg image end -->
 
     <!-- roadmap section start -->
@@ -888,6 +892,7 @@
 
     <!-- bg image start -->
     <div class="bg-img bg-img-5"></div>
+
     <!-- bg image end -->
 
     <!-- team section -->
@@ -1025,14 +1030,14 @@
         </form>
 
         <div class="contact-us-links fade-in">
-          <a class="contact-us-link contact-us-link-1">
+          <a href="#" class="contact-us-link contact-us-link-1">
             <i class="fa-regular fa-envelope email-icon"></i> Contact Us
           </a>
-          <a class="contact-us-link contact-us-link-2">
+          <a href="#" class="contact-us-link contact-us-link-2">
             <i class="fa-regular fa-envelope email-icon"></i> Partnership
             Inquiries
           </a>
-          <a class="contact-us-link contact-us-link-3">
+          <a href="#" class="contact-us-link contact-us-link-3">
             <i class="fa-regular fa-envelope email-icon"></i> Jobs
           </a>
         </div>
